# shapes-and-colours

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  StartMenuScene.cpp  StartMenuScene.hpp  audio.cpp  bullet.cpp  bullet.hpp  game_parameters.hpp  game_scene.cpp  game_scene.hpp  game_system.cpp  game_system.hpp  invader.cpp  invader.hpp  main.cpp  pause_menu.cpp  pause_menu.hpp  player.cpp  player.hpp  scene.hpp  ship.cpp  ship.hpp  start_menu_scene.cpp  start_menu_scene.hpp
src/game_objects/: crystal_entity.hpp  entities.hpp  entity.hpp  light_ray.cpp  light_ray.hpp
src/game_objects/components/: collision_component.cpp  collision_component.hpp  crystal_component.cpp  crystal_component.hpp  input_component.cpp  input_component.hpp  light_beam_component.hpp  light_component.cpp  light_component.hpp  physics_component.cpp  physics_component.hpp  shape_component.cpp  shape_component.hpp  sprite_component.cpp  sprite_component.hpp  transform_component.cpp  transform_component.hpp
src/interfaces/: movable.cpp  movable.hpp  positionable.cpp  positionable.hpp
src/managers/: entity_manager.cpp  entity_manager.hpp  physics_manager.cpp  physics_manager.hpp  resource_manager.cpp  resource_manager.hpp
src/systems/: crystal_system.cpp  crystal_system.hpp  input_system.cpp  input_system.hpp  light_system.cpp  light_system.hpp  movement_system.cpp  movement_system.hpp  physics_system.cpp  physics_system.hpp  system.cpp  system.hpp  transform_system.cpp  transform_system.hpp
src/utils/: b2d_utils.cpp  b2d_utils.hpp  color_utils.cpp  color_utils.hpp
